@@ -1,10 +1,0 @@
-python-dateutil
-pytz
-jsonschema >= 2.6.0
-pymongo >= 4.8.0
-mmcif >= 0.91.0
-rcsb.utils.config >= 0.40
-rcsb.utils.io >= 1.46
-rcsb.utils.multiproc >= 0.19
-rcsb.utils.dictionary >= 1.32
-rcsb.utils.repository >= 0.50
