@@ -2,11 +2,11 @@
 #
 [local_settings]
 # project specific local settings
-test_pattern = "test*Remote*py"
+test_pattern = "test*.py"
 fixture_pattern = "fixture*.py"
 #
 # Source pathls (unquoted and space separated list of files/directories) for linting and format checks
-source_paths = rcsb/db setup.py
+source_paths = rcsb/db
 #
 # Start directory path for test discovery
 # Each path must reference valid directory that is searchable by Python (i.e. contains __init__.py)
@@ -15,7 +15,7 @@ source_paths = rcsb/db setup.py
 fixture_path_1 = "rcsb/db/tests"
 test_path_1 = "rcsb/db/tests"
 test_path_2 = "rcsb/db/tests-mongo"
-; test_path_3 = "rcsb/db/cli"
+test_path_3 = "rcsb/db/cli"
 #
 # These are placeholders valid source directories without tests files
 #test_path_2 = "rcsb/db/tests-validate"
@@ -41,7 +41,7 @@ coverage_cutoff = 65
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, py{310}
+envlist = format_pep8-{py313}, lint_pylint-{py313}, format_black-{py313}, py{313}, test_coverage-{py313}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -52,78 +52,87 @@ passenv = CONFIG_SUPPORT_TOKEN_ENV
 allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
-basepython = py310: python3.10
+basepython = py313: python3.13
 
-[testenv:py310]
+[testenv:py313]
 description = 'Run unit tests (unittest runner) using {envpython}'
-platform=
+platform =
        macos: darwin
        linux: linux
 skip_install = false
 recreate = true
-alwayscopy=true
-package = editable-legacy
+alwayscopy = true
+usedevelop = true
 deps =
-    jsonschema
-    rcsb.utils.chemref>=0.91
-    jsondiff>=1.2.0
-    -r requirements.txt
+       .[tests]
 commands =
     echo "Starting {envname}"
     {envpython} -V
     {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_1} --pattern "{[local_settings]fixture_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-    ; {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py310]
+[testenv:format_pep8-py313]
 description = 'Run selected PEP8 compliance checks (flake8)'
-platform=
+platform =
        macos: darwin
        linux: linux
 deps =
-    flake8
-    # This plugin is no longer compatible with latest pydocstyles -
-    # flake8-docstrings>=0.2.7
-    flake8-import-order>=0.9
-    -r requirements.txt
+       .[tests]
 commands =
     # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py310]
+[testenv:lint_pylint-py313]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
 deps =
-    jsonschema
-    rcsb.utils.chemref>=0.91
-    jsondiff>=1.2.0
-    pylint
-    -r requirements.txt
+       .[tests]
 commands =
     echo "Starting {envname}"
     pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  {[local_settings]source_paths}
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py310]
+[testenv:format_black-py313]
 description = 'Run format compliance checks (black)'
-platform=
+platform =
        macos: darwin
        linux: linux
 deps =
-    black>=20.8b
-    -r requirements.txt
-    #    isort>=4.3.20
+       .[tests]
 commands =
     echo "Starting {envname}"
     black --check --line-length 185  {[local_settings]source_paths}
-    #    isort -rc rcsb/utils --check-only
     echo "Completed {envname}"
 
 #
+
+[testenv:test_coverage-py313]
+description = 'Run test coverage analysis'
+platform =
+       macos: darwin
+       linux: linux
+recreate = true
+alwayscopy = true
+usedevelop = true
+deps =
+       .[tests]
+
+commands =
+    echo "Starting {envname}"
+    coverage erase
+    coverage run --parallel-mode --omit="{[local_settings]coverage_exclude_paths}" --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
+    coverage run --parallel-mode --omit="{[local_settings]coverage_exclude_paths}"  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
+    echo " ------- Consolidating {envname} data ----------"
+    coverage combine
+    echo " ------- Building {envname} reports ----------"
+    coverage report --fail-under={[local_settings]coverage_cutoff}
+    - coverage xml
+    echo "Completed {envname}"
